Add some credits for the photo owner

--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ body{
     background-image: url(asset/halie-west-25xggax4bSA-unsplash.jpg);
     background-size:cover;
     background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem;
 
 }
 
@@ -42,6 +46,19 @@ body{
     height: 180px;
     background-color: rgba(0,0,0,0.5);
 }
+
+.credits{
+  text-align: center;
+  font-size: 1rem;
+  color: #E5E7EB;
+}
+
+.credits a{
+  font-style: italic;
+  color: #E5E7EB;
+
+}
+
 
 .logo-text{
     display: flex;
